# basic

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md
include/basic/: basic_object.h  stuff.h  types.h
src/: basic_object.cpp  stuff.cpp
